service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fuseki
spec:
  selector:
    app: fuseki
  ports:
  - port: 80
    targetPort: 3030
